fixed end game sequence

--- a/hangmanApp/Base.lproj/Main.storyboard
+++ b/hangmanApp/Base.lproj/Main.storyboard
@@ -86,9 +86,9 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Let's Hang Someone" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nb3-bL-J9c">
-                                <rect key="frame" x="70.000000000000014" y="313" width="253.33333333333337" height="24"/>
+                                <rect key="frame" x="60" y="313" width="273.33333333333331" height="24"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="c6I-9Y-gBU"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="400" id="c6I-9Y-gBU"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -255,7 +255,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="25" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7s4-61-BgP">
-                                                <rect key="frame" x="199.33333333333331" y="0.0" width="35" height="34.333333333333336"/>
+                                                <rect key="frame" x="199.33333333333337" y="0.0" width="35" height="34.333333333333336"/>
                                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="Y" cornerStyle="capsule" buttonSize="medium"/>
@@ -264,7 +264,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="21" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yfe-gn-zaM">
-                                                <rect key="frame" x="237.99999999999997" y="0.0" width="36.333333333333343" height="34.333333333333336"/>
+                                                <rect key="frame" x="238.00000000000003" y="0.0" width="36.333333333333343" height="34.333333333333336"/>
                                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="U" cornerStyle="capsule" buttonSize="medium"/>
@@ -314,7 +314,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="19" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1gf-CE-e9e">
-                                                <rect key="frame" x="38.000000000000014" y="0.0" width="34.666666666666671" height="34.333333333333336"/>
+                                                <rect key="frame" x="37.999999999999986" y="0.0" width="34.666666666666671" height="34.333333333333336"/>
                                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="S" cornerStyle="capsule" buttonSize="medium"/>
@@ -323,7 +323,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="voB-1c-08f">
-                                                <rect key="frame" x="75.333333333333343" y="0.0" width="36" height="34.333333333333336"/>
+                                                <rect key="frame" x="75.333333333333329" y="0.0" width="36" height="34.333333333333336"/>
                                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="D" cornerStyle="capsule" buttonSize="medium"/>
@@ -350,7 +350,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="8" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bmh-6w-g3Z">
-                                                <rect key="frame" x="189.33333333333334" y="0.0" width="36.333333333333343" height="34.333333333333336"/>
+                                                <rect key="frame" x="189.33333333333331" y="0.0" width="36.333333333333343" height="34.333333333333336"/>
                                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="H" cornerStyle="capsule" buttonSize="medium"/>
@@ -359,7 +359,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="10" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xIO-zZ-Re4">
-                                                <rect key="frame" x="228.33333333333334" y="0.0" width="33.000000000000028" height="34.333333333333336"/>
+                                                <rect key="frame" x="228.33333333333331" y="0.0" width="33" height="34.333333333333336"/>
                                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="J" cornerStyle="capsule" buttonSize="medium"/>
@@ -461,7 +461,7 @@
                         <viewLayoutGuide key="safeArea" id="cWz-HI-0Ko"/>
                         <color key="backgroundColor" red="0.94509803920000002" green="0.93725490199999995" blue="0.90588235289999997" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="cWz-HI-0Ko" firstAttribute="trailing" secondItem="nb3-bL-J9c" secondAttribute="trailing" constant="70" id="3dm-5s-XrO"/>
+                            <constraint firstItem="cWz-HI-0Ko" firstAttribute="trailing" secondItem="nb3-bL-J9c" secondAttribute="trailing" constant="60" id="3dm-5s-XrO"/>
                             <constraint firstItem="op0-RU-yw9" firstAttribute="leading" secondItem="cWz-HI-0Ko" secondAttribute="leading" constant="5" id="3vG-i8-i90"/>
                             <constraint firstItem="cWz-HI-0Ko" firstAttribute="trailing" secondItem="rYF-CE-3PQ" secondAttribute="trailing" constant="37" id="48o-we-vrv"/>
                             <constraint firstItem="cWz-HI-0Ko" firstAttribute="trailing" secondItem="mu6-ah-jxC" secondAttribute="trailing" constant="83" id="7zG-FA-rSa"/>
@@ -473,7 +473,7 @@
                             <constraint firstItem="cWz-HI-0Ko" firstAttribute="trailing" secondItem="op0-RU-yw9" secondAttribute="trailing" constant="2.6699999999999999" id="R40-v0-eM4"/>
                             <constraint firstItem="zmC-x8-oh1" firstAttribute="leading" secondItem="cWz-HI-0Ko" secondAttribute="leading" constant="28" id="R7C-Qq-Sg1"/>
                             <constraint firstItem="cWz-HI-0Ko" firstAttribute="trailing" secondItem="zmC-x8-oh1" secondAttribute="trailing" constant="28" id="RH0-T1-IkF"/>
-                            <constraint firstItem="nb3-bL-J9c" firstAttribute="leading" secondItem="cWz-HI-0Ko" secondAttribute="leading" constant="70" id="Zal-hW-egi"/>
+                            <constraint firstItem="nb3-bL-J9c" firstAttribute="leading" secondItem="cWz-HI-0Ko" secondAttribute="leading" constant="60" id="Zal-hW-egi"/>
                             <constraint firstItem="cWz-HI-0Ko" firstAttribute="trailing" secondItem="6FX-yn-P8b" secondAttribute="trailing" constant="59.670000000000002" id="klz-Qm-vfk"/>
                             <constraint firstItem="rYF-CE-3PQ" firstAttribute="leading" secondItem="cWz-HI-0Ko" secondAttribute="leading" constant="38" id="rTn-8x-sEo"/>
                             <constraint firstItem="mu6-ah-jxC" firstAttribute="top" secondItem="op0-RU-yw9" secondAttribute="bottom" constant="35" id="sRm-FY-gco"/>
